Fixed z-index issue on active tab

--- a/src/app/component/result-tab/result-tab.component.scss
+++ b/src/app/component/result-tab/result-tab.component.scss
@@ -41,7 +41,7 @@
     margin-top: 10px;
     border-bottom: 0px;
     background: none;
-    z-index: 1;
+    // z-index: 1;
 }
 
 .bundler {
